# message-classifier

./: Dockerfile  README.md  app.py  pyproject.toml  requiements.txt  requirements.txt  test_main.http
.github/workflows/: CI-CD.yaml
tests/: classification_test.py
